# 8086-emu

./: CMakeLists.txt  go.ps1
src/: main.cpp
