cmake_minimum_required(VERSION 3.5.0)
set(CMAKE_CXX_STANDARD 23)
project(8086deode VERSION 0.1.0 LANGUAGES C CXX)


file(GLOB_RECURSE HEADERS RELATIVE ${CMAKE_SOURCE_DIR} "src/*.h")
file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.cpp")

add_executable(8086decode ${SOURCES} ${HEADERS})

